[+TASK] initial Release 0.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ build.properties
 .settings/**/*
 .externalToolBuilders
 .externalToolBuilders/**/*
+.vagrant/.vagrant
+src/api.php
+src/test.php
+.vagrant/.vagrant
