--- a/.vagrant/Vagrantfile
+++ b/.vagrant/Vagrantfile
@@ -8,8 +8,10 @@ Vagrant::Config.run do |config|
 	config.vm.share_folder("www", "/usr/local/src/magento/deployment/", "../src/")
 	config.vm.share_folder("vagrant", "/usr/local/src/vagrant/", "../.vagrant/")
 	
+	config.vm.share_folder("magento", "/usr/local/src/magento/versions/", "/Users/weller/Dropbox/magentosources")	
+	
 	config.vm.customize do |vm|
 		vm.memory_size = 1024
-		vm.name = "Vagrant Flagbit Secure Passwords 2"
+		vm.name = "Magento-ContentFromUrl"
 	end
 end
